--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -46,7 +46,7 @@
     </div>
     <div class="col-md-4">
         <h3><i class="fa fa-cloud-download" aria-hidden="true"></i> Hacker News</h3>
-        <p>This is a HackerNews clone built upon HN’s official <a href="https://github.com/HackerNews/API" target="_blank">Firebase API</a>, and using Asynchronous module definition (AMD) is a JavaScript specification that defines an API for defining code modules and their dependencies, and loading them asynchronously if desired.
+        <p>This is a HackerNews clone built upon HN’s official <a href="https://github.com/HackerNews/API" target="_blank">Firebase API</a>, and using Asynchronous module definition (AMD) is a JavaScript specification that defines an API for defining code modules and their dependencies, and loading them asynchronously if desired.</p>
         <p>This example can be found <a href="http://vuejs.org/examples/hackernews.html" target="_blank">here</a></p>
         <p><a class="btn btn-default" href="#" role="button" v-link="'/hackernews/news/1'">View details &raquo;</a></p>
     </div>
