--- a/app/components/app/templates/footer.menu.html
+++ b/app/components/app/templates/footer.menu.html
@@ -1,5 +1,5 @@
 <div id="footer" class="row">
-    <div class="col-xs-4">
+    <div class="col-xs-3">
         <h3>Help</h3>
         <ul>
             <li>
@@ -9,11 +9,11 @@
                 <a v-link="'/readme'" >Readme</a>
             </li>
             <li>
-                <a href="https://github.com/bsa-git/silex-mvc/" target="_blank">GitHub</a>
+                <a href="https://github.com/bsa-git/vue-examples/" target="_blank">GitHub</a>
             </li>
         </ul>
     </div>
-    <div class="col-xs-4">
+    <div class="col-xs-3">
         <h3>Documentation</h3>
         <ul>
             <li>
@@ -27,7 +27,7 @@
             </li>
         </ul>
     </div>
-    <div class="col-xs-4">
+    <div class="col-xs-3">
         <h3>Community</h3>
         <ul>
             <li>
@@ -44,6 +44,17 @@
             </li>
             <li>
                 <a href="https://twitter.com/vuejs" target="_blank">Twitter</a>
+            </li>
+        </ul>
+    </div>
+    <div class="col-xs-3">
+        <h3>Select language:</h3>
+        <ul>
+            <li :class="{active: locale == 'en'}">
+                <a v-link="$route.path" @click="setLocale('en')">{{ 'english'|trans|capitalize }}</a>
+            </li>
+            <li :class="{active: locale == 'ru'}">
+                <a v-link="$route.path" @click="setLocale('ru')">{{ 'russian'|trans|capitalize }}</a>
             </li>
         </ul>
     </div>
