--- a/app/components/app/templates/footer.privacy.html
+++ b/app/components/app/templates/footer.privacy.html
@@ -1,4 +1,4 @@
 <div id="bsa-footer" class="text-center">
-    © 2016 by Sergei Beskorovainyi. All rights reserved<br>
+    {{ 'developer_copyright'|trans|capitalize }}<br>
     E-mail bsa2657@yandex.ru
 </div>
