Update Home page

--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -10,6 +10,16 @@
 <hr>
 
 <h1 class="text-center">Examples</h1>
+<blockquote>
+    <p class="lead">
+        To demonstrate the Vue.js library, examples from the <a href="http://vuejs.org/examples/" target="_blank">official website</a> 
+        have been used with some modifications.
+        To download the packages I have used technology Asynchronous module definition (AMD). 
+        AMD is a JavaScript specification that defines an API for defining code modules and their dependencies, 
+        and loading them asynchronously if desired.
+    </p>
+    <footer>Examples from the official website can be found <a href="http://vuejs.org/examples/" target="_blank">here</a></footer>
+</blockquote>
 <!-- Example row of columns -->
 <div class="row">
     <div class="col-md-4">
