--- a/app/components/hackernews/hackernews.html
+++ b/app/components/hackernews/hackernews.html
@@ -1,5 +1,9 @@
 <blockquote>
-    <p class="lead">This is a HackerNews clone built upon HN’s official <a href="https://github.com/HackerNews/API" target="_blank">Firebase API</a>, and using Asynchronous module definition (AMD) is a JavaScript specification that defines an API for defining code modules and their dependencies, and loading them asynchronously if desired.</p>
+    <p class="lead">
+        This is a HackerNews clone built upon HN’s official <a href="https://github.com/HackerNews/API" target="_blank">Firebase API</a>.
+        In partnership with Firebase, we're making the public Hacker News data available 
+        in near real time. Firebase enables easy access from Android, iOS and the web.
+    </p>
     <footer>This example can be found <a href="http://vuejs.org/examples/hackernews.html" target="_blank">here</a></footer>
 </blockquote>
 
