--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -2,21 +2,23 @@
 <div class="jumbotron">
     <!--<div class="container">-->
     <h1 class="">Hellow Vue.js</h1>
-    <p style="line-height: 1.1em;">Vue.js (pronounced /vjuː/, like view) is a library for building interactive web interfaces. The goal of Vue.js is to provide the benefits of reactive data binding and composable view components with an API that is as simple as possible.</p>
-    <p><a class="btn btn-primary btn-lg" href="http://vuejs.org/guide/" role="button" target="_blank">Learn more &raquo;</a></p>
+    <p style="line-height: 1.1em;">
+        Vue.js (pronounced /vjuː/, like view) is a library for building interactive web interfaces. 
+        The goal of Vue.js is to provide the benefits of reactive data binding and 
+        composable view components with an API that is as simple as possible.
+    </p>
+    <p>
+        <a class="btn btn-primary btn-lg" href="http://vuejs.org/guide/" role="button" target="_blank">Learn more &raquo;</a>
+    </p>
     <!--</div>-->
 </div>
-
 <hr>
-
 <h1 class="text-center">Examples</h1>
 <blockquote>
     <p class="lead">
-        To demonstrate the Vue.js library, examples from the <a href="http://vuejs.org/examples/" target="_blank">official website</a> 
-        have been used with some modifications.
-        To download the packages I have used technology Asynchronous module definition (AMD). 
-        AMD is a JavaScript specification that defines an API for defining code modules and their dependencies, 
-        and loading them asynchronously if desired.
+        These examples with slight modifications have been used from the 
+        <a href="http://vuejs.org/examples/" target="_blank">official website</a> 
+        to demonstrate the work of the library Vue.js.
     </p>
     <footer>Examples from the official website can be found <a href="http://vuejs.org/examples/" target="_blank">here</a></footer>
 </blockquote>
@@ -56,7 +58,11 @@
     </div>
     <div class="col-md-4">
         <h3><i class="fa fa-cloud-download" aria-hidden="true"></i> Hacker News</h3>
-        <p>This is a HackerNews clone built upon HN’s official <a href="https://github.com/HackerNews/API" target="_blank">Firebase API</a>, and using Asynchronous module definition (AMD) is a JavaScript specification that defines an API for defining code modules and their dependencies, and loading them asynchronously if desired.</p>
+        <p>
+            This is a HackerNews clone built upon HN’s official <a href="https://github.com/HackerNews/API" target="_blank">Firebase API</a>.
+            In partnership with Firebase, we're making the public Hacker News data available 
+            in near real time. Firebase enables easy access from Android, iOS and the web.
+        </p>
         <p>This example can be found <a href="http://vuejs.org/examples/hackernews.html" target="_blank">here</a></p>
         <p><a class="btn btn-default" href="#" role="button" v-link="'/hackernews/news/1'">View details &raquo;</a></p>
     </div>
