Update home.html and github.html

--- a/app/components/github/github.html
+++ b/app/components/github/github.html
@@ -1,5 +1,5 @@
 <blockquote>
-    <p class="lead">This example fetches latest "Silex-MVC" commits data from GitHub’s API and displays them as a list. You can switch between the master and other branches.</p>
+    <p class="lead">This example fetches latest <a href="https://github.com/bsa-git/silex-mvc/" target="_blank">Silex-MVC</a> commits data from GitHub’s API and displays them as a list. You can switch between the master and other branches.</p>
     <footer>This example can be found <a href="http://vuejs.org/examples/commits.html" target="_blank">here</a></footer>
 </blockquote>
 
