--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -38,7 +38,7 @@
     </div>
     <div class="col-md-4">
         <h3><i class="fa fa-github" aria-hidden="true"></i> GitHub Commits</h3>
-        <p>This example fetches latest "Silex-MVC" commits data from GitHub’s API and displays them as a list. You can switch between the master and other branches. GitHub is a code hosting platform for version control and collaboration. It lets you and others work together on projects from anywhere.</p>
+        <p>This example fetches latest <a href="https://github.com/bsa-git/silex-mvc/" target="_blank">Silex-MVC</a> commits data from GitHub’s API and displays them as a list. You can switch between the master and other branches. GitHub is a code hosting platform for version control and collaboration. It lets you and others work together on projects from anywhere.</p>
         <p>This example can be found <a href="http://vuejs.org/examples/commits.html" target="_blank">here</a></p>
         <p><a class="btn btn-default" href="#" role="button" v-link="'/github'">View details &raquo;</a></p>
     </div>
